Enable embedded HTTP integration tests